--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,7 @@
 {
-    "name": "combustion/combustion",
-    "description": "A small light-weight PHP framework",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Siddharth Yadav",
-            "email": "siddharth_yadav@outlook.com"
-        }
-    ],
-    "minimum-stability": "dev",
-    "require": {
-        "php": ">=5.3.0"
-    },
-    "autoload": {
-        "psr-0": {
-            "combustion": "src/"
-        }
-    }
+	"autoload": {
+		"classmap": [
+			"engine/"
+		]
+	}
 }
