Updated the framework to version 0.4
Updated framework to use PSR-4 autoloading
Added PSR-3 compliant custom logger
Added psr/log in composer.json
Created a better custom response header wrapper

--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
     "require" : {
         "symfony/http-foundation": "2.6.*@dev",
-	    "twig/twig": "1.*"
+        "monolog/monolog": "1.11.*@dev"
     },
     "require-dev": {
         "filp/whoops": "1.2.*@dev"
     },
     "autoload" : {
-    	"psr-0" : {
-    		"Combustion" : "./Xk0nSid"
+    	"psr-4" : {
+    		"Combustion\\" : "./Xk0nSid/Combustion"
     	}
     }
 }
